[tool.poetry]
name = "tutor_recon"
version = "0.14.0"
description = "recon plugin for Tutor"
authors = ["Skill-Up Technologies"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
tutor = "^12.0.4"
cloup = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
autoflake = "^1.4"
bpython = "^0.21"

[tool.poetry.plugins."tutor.plugin.v0"]
recon = "tutor_recon.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
